# ptc_windchill_checker

./: .gitignore  CLAUDE.md  README.md  project_design_questions.md  pyproject.toml
config/: checks.json  containers.json  types.json
notebooks/: exploration.ipynb
src/oneplm_ingestion/: __init__.py  api.py  auth.py  checks.py  cli.py  content_checks.py  dataframe.py  db.py  export.py  folders.py  lookup.py  models.py  pdf.py  relationships.py  sync.py
