[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneplm_ingestion"
version = "0.1.0"
description = "CLI tool to ingest and validate data from PTC Windchill"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "keyring>=25.0",
    "docling>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
notebook = [
    "pandas>=2.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
oneplm = "oneplm_ingestion.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
